--- a/src/main/resources/templates/hometemplate.html
+++ b/src/main/resources/templates/hometemplate.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>lesson_103A</title>
+    <title>Exercise_103A</title>
 
 </head>
 <body>
